syntax = "proto3";
package user;
option go_package = "github.com/p1ass/twirp-playground/generated/pb";

import 'proto/common/date.proto';
import "google/protobuf/empty.proto";

service AuthenticationService {
  rpc Authenticate(google.protobuf.Empty) returns (AuthenticateRes);
}

message AuthenticateRes {
  common.Date authenticatedAt = 1;
}

